Added dates validation. Added validation messages localization.Added tests. Added replenishing of seats number, when user cancells order. Refactored view

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,36 @@
 #common-main
 nav.home=Home
+nav.welcome.guest=Welcome, Guest!
+nav.welcome.admin=Welcome, Admin!
+nav.welcome=Hi
 nav.about-us=About us
-nav.lang.change=Change language
+nav.login=Login
+nav.register=Register
 nav.user.about=About me
 nav.user.logout=Logout
+
+#login-page
+login.header=Login Page
+login.post=Login
+login.no-account=No account yet
+login.back=Go back
+
+#register-page
+register.header=Register Page
+register.post=Register
+register.rules= I agree all statements in
+register.terms=Terms of service
+register.already.exist=I have account
+
+#about-page
+about.header=Your personal information
+about.first.name=First name
+about.last.name=Last name
+about.email=Email
+about.phone=Mobile phone
+about.me=About me
+
+
 
 #admin-users
 nav.admin.users=Users
@@ -43,7 +70,15 @@ admin.route-point.station=Station id, name
 admin.route-point.add.form=Add route-point
 admin.route-point.edit.form=Edit route-point
 
+#customer
+customer.tickets=My tickets
+
 #label-helpers
+label.login.email=Enter your email
+label.login.password=Enter your password
+label.register.first=Enter your first name
+label.register.last=Enter your last name
+label.register.repeat.pass=Repeat your password
 label.user.first.name=First name
 label.user.last.name=Last name
 label.user.email=Email
@@ -58,6 +93,26 @@ label.wagon.base-price=Basic price
 label.route.route=Route number
 label.route.train=Train number
 
+#booking-ticket-data
+ticket.train=Train number
+ticket.wagon=Wagon number
+ticket.type=Comfort class
+ticket.status=Status
+ticket.info=After you will pay for ticket, you may download it by clicking on the icon
+booking.header=Plan your trip now!
+select.departure=Select departure station
+select.arrival=Select arrival station
+booking.found.train=Train
+booking.found.direction=From/To
+booking.found.schedule=Schedule
+booking.found.duration=Duration
+booking.found.seats=Seats available
+booking.found.price=Price(uah)
+booking.found.seats-present=Seats
+booking.confirm.header=Booking confirmation
+booking.confirm.wagon=Select wagon
+
+
 #buttons and common columns
 admin.actions=Actions
 button.add.station=Add new station
@@ -65,13 +120,45 @@ button.add.wagon=Add new wagon
 button.add.route=Add new route
 button.add.route-point=Add new route-point
 button.update=Update
+button.booking.confirm=Order
 
 #warnings
+login.not.correct=Wrong email or password, try again
 admin.no.users.found=No users found
 admin.no.stations.found=No stations found
 admin.no.wagons.found=No wagons found
 admin.no.routes.found=No routes found
 admin.no.station=Not added yet
+booking.confirm.wagon.full=No place in selected wagon
+
+#enums
+FIRST=First
+SECOND=Second
+PAID=Paid
+NOT_PAID=Not paid
+
+#validation
+route.id.notnull=Id cannot be empty field
+route.id.min=Minimum value must be more than 1
+route.id.max=Maximum value must be less than 999
+route.point.dates=Date must not be in past and departure date must be after arrival date
+station.name.notblank=Station name cannot be empty field
+station.code.notblank=Station code cannot be empty field
+station.name.pattern=Station name should be from 4 to 16 letters cyrillic/latin
+station.code.pattern=Code should be only up to 3 capitals cyrillic/latin
+user.firstname.notblank=First name cannot be empty field
+user.lastname.notblank=Last name cannot be empty field
+user.firstname.pattern=First name should be up to 16 letters cyrillic/latin
+user.lastname.pattern=First name should be up to 16 letters cyrillic/latin
+user.email.notblank=Email field cannot be empty
+user.email.notcorrect=Email field must be correct
+user.password.notblank=User password cannot be null
+user.password.pattern=Password should be from 8 to 16 symbols, at least 1 capital and 1 digit
+wagon.seats.min=Minimum value of seats must be more than 1
+wagon.seats.max=Maximum value of seats must be less than 999
+wagon.price.min=Minimum value of price must be more than 1
+wagon.price.max=Maximum value of price must be less than 999
+
 
 
 
