--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -1,9 +1,34 @@
 #common
 nav.home=\u0413\u043e\u043b\u043e\u0432\u043d\u0430
+nav.welcome.guest=\u0412\u0456\u0442\u0430\u0454\u043c\u043e, \u0413\u0456\u0441\u0442\u044c!
+nav.welcome.admin=Привіт, Адміністратор!
+nav.welcome=\u041f\u0440\u0438\u0432\u0456\u0442
 nav.about-us=\u041f\u0440\u043e \u043d\u0430\u0441
-nav.lang.change=\u0417\u043c\u0456\u043d\u0438\u0442\u0438 \u043c\u043e\u0432\u0443
+nav.login=\u0412\u0445\u0456\u0434
+nav.register=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044f
 nav.user.about=\u041f\u0440\u043e \u043c\u0435\u043d\u0435
 nav.user.logout=\u0412\u0438\u0439\u0442\u0438
+
+#login-page
+login.header=Сторінка входу
+login.post=Увійти
+login.no-account=Ще немає акаунту
+login.back=Повернутись на головну
+
+#register-page
+register.header=Сторінка реєстрації
+register.post=Зареєструватись
+register.rules= Я погоджуюсь з усіма пунктами у
+register.terms=Згоді
+register.already.exist=Я вже зареєстрований
+
+#about-me-page
+about.header=Про мене
+about.first.name=Ім`я
+about.last.name=Фамілія
+about.email=Електронна пошта
+about.phone=Телефон
+about.me=Стисло про себе
 
 #admin-users
 nav.admin.users=\u041a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
@@ -43,7 +68,15 @@ admin.route-point.station=Id \u0421\u0442\u0430\u043d\u0446\u0456\u0456 \u0442\u
 admin.route-point.add.form=\u0414\u043e\u0434\u0430\u0432\u0430\u043d\u043d\u044f \u0442\u043e\u0447\u043a\u0438 \u043c\u0430\u0440\u0448\u0440\u0443\u0442\u0430
 admin.route-point.edit.form=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0442\u043e\u0447\u043a\u0443 \u043c\u0430\u0440\u0448\u0440\u0443\u0442\u0430
 
+#customer
+customer.tickets=\u041c\u043e\u0457 \u043a\u0432\u0438\u0442\u043a\u0456
+
 #label-helpers
+label.login.email=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u0441\u0432\u043e\u044e \u0435\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u0443 \u0430\u0434\u0440\u0435\u0441\u0443
+label.login.password=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u0441\u0432\u0456\u0439 \u043f\u0430\u0440\u043e\u043b\u044c
+label.register.first=Введіть своє ім`я
+label.register.last=Введіть свою фамілію
+label.register.repeat.pass=Повторіть свій пароль
 label.user.first.name=\u0406\u043c\`\u044f
 label.user.last.name=\u0424\u0430\u043c\u0456\u043b\u0456\u044f
 label.user.email= \u041f\u043e\u0448\u0442\u043e\u0432\u0430 \u0430\u0434\u0440\u0435\u0441\u0430
@@ -58,6 +91,23 @@ label.wagon.base-price=\u0411\u0430\u0437\u043e\u0432\u0430 \u0446\u0456\u043d\u
 label.route.route=\u041d\u043e\u043c\u0435\u0440 \u043c\u0430\u0440\u0448\u0440\u0443\u0442\u0430
 label.route.train=\u041d\u043e\u043c\u0435\u0440 \u043f\u043e\u0442\u044f\u0433\u0430
 
+#booking-ticket-data
+ticket.train=Номер потягу
+ticket.wagon=Номер вагону
+ticket.type=Класс комфорту
+ticket.status=Статус
+ticket.info=Ви зможете отримати квиток після оплати, натиснувши на відповідну іконку
+booking.header=Бронюйте вашу подорож зараз!
+select.departure=Оберіть станцію відправлення
+select.arrival=Оберіть станцію прибуття
+booking.found.train=Потяг
+booking.found.direction=Від/До
+booking.found.schedule=Розклад
+booking.found.duration=Тривалість
+booking.found.seats=Наявні місця
+booking.found.price=Ціна(грн)
+booking.found.seats-present=Місць
+booking.confirm.header=Підтвердження заказу
 
 #buttons and common columns
 admin.actions=\u0414\u0456\u0457
@@ -66,9 +116,43 @@ button.add.wagon=\u0414\u043e\u0434\u0430\u0442\u0438 \u043d\u043e\u0432\u0438\u
 button.add.route=\u0414\u043e\u0434\u0430\u0442\u0438 \u043d\u043e\u0432\u0438\u0439 \u043c\u0430\u0440\u0448\u0440\u0443\u0442
 button.add.route-point=\u0414\u043e\u0434\u0430\u0442\u0438 \u0443 \u043c\u0430\u0440\u0448\u0440\u0443\u0442
 button.update=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
+button.booking.confirm=Придбати
+booking.confirm.wagon=Оберіть номер вагону
 
 #warnings
+login.not.correct=\u041d\u0435\u043a\u043e\u0440\u0435\u043a\u0442\u043d\u0430 \u0430\u0434\u0440\u0435\u0441\u0430/\u043f\u0430\u0440\u043e\u043b\u044c, \u0441\u043f\u0440\u043e\u0431\u0443\u0439\u0442\u0435 \u0449\u0435
 admin.no.users.found=\u041d\u0435\u043c\u0430\u0454 \u0437\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u043e\u0432\u0430\u043d\u0438\u0445 \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432
 admin.no.stations.found=\u0416\u043e\u0434\u043d\u0438\u0445 \u0441\u0442\u0430\u043d\u0446\u0456\u0439 \u043d\u0435 \u0437\u043d\u0430\u0439\u0434\u0435\u043d\u043e
 admin.no.wagons.found=\u0416\u043e\u0434\u043d\u043e\u0433\u043e \u0432\u0430\u0433\u043e\u043d\u0443 \u043d\u0435 \u0437\u043d\u0430\u0439\u0434\u0435\u043d\u043e
 admin.no.station=\u0421\u0442\u0430\u043d\u0446\u0456\u044f \u0432\u0456\u0434\u0441\u0443\u0442\u043d\u044f
+booking.confirm.wagon.full=Немає місць у обраному вагоні
+
+#enums
+FIRST=Перший
+SECOND=Другий
+PAID=Оплачено
+NOT_PAID=Не оплачено
+
+#validation
+route.id.notnull=Номер маршруту не введений
+route.id.min=Номер маршруту має бути від 1
+route.id.max=Номер маршруту має бути менший ніж 999
+route.point.dates=Дати не повинні бути у минулому часі. Дата відправлення повинна бути після дати прибуття
+station.name.notblank=Введіть назву станції
+station.code.notblank=Введіть код станції
+station.name.pattern=Назва станціі має бути від 4 до 16 букв
+station.code.pattern=Код станціі має бути від 1 до 3 великих букв
+user.firstname.notblank=Поле ім`я не має бути незаповненим
+user.lastname.notblank=Поле фамілія не має бути незаповненим
+user.firstname.pattern=Ім`я має бути до 16 букв
+user.lastname.pattern=Фамілія має бути до 16 букв
+user.email.notblank=Поштова адреса не заповнена
+user.email.notcorrect=Невірно введена поштова адреса
+user.password.notblank=Пароль не введений
+user.password.pattern=Пароль має бути від 8 до 16 літер, мінімум 1 велика літера та цифра
+wagon.seats.min=Кількість місць має бути від 1
+wagon.seats.max=Кількість місць має бути менш ніж 999
+wagon.price.min=Ціна за місце має бути від 1
+wagon.price.max=Ціна за місце має бути менш ніж 999
+
+
