Added order controller, added error page handler for custom pages, added views, added tests, added qr code generator, added pdf ticket creating, added README

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -29,8 +29,7 @@ about.last.name=Last name
 about.email=Email
 about.phone=Mobile phone
 about.me=About me
-
-
+about.balance=Balance
 
 #admin-users
 nav.admin.users=Users
@@ -70,6 +69,14 @@ admin.route-point.station=Station id, name
 admin.route-point.add.form=Add route-point
 admin.route-point.edit.form=Edit route-point
 
+#admin-orders
+nav.admin.orders=Orders
+admin.user.id=Buyer id
+admin.passenger.firstname=Passenger`s name
+admin.passenger.lastname=Passenger`s surname
+admin.user.email=Buyer email
+admin.no.orders.found=No orders found
+
 #customer
 customer.tickets=My tickets
 
@@ -100,6 +107,7 @@ ticket.type=Comfort class
 ticket.status=Status
 ticket.info=After you will pay for ticket, you may download it by clicking on the icon
 booking.header=Plan your trip now!
+booking.header.error=Booking error page
 select.departure=Select departure station
 select.arrival=Select arrival station
 booking.found.train=Train
@@ -111,7 +119,8 @@ booking.found.price=Price(uah)
 booking.found.seats-present=Seats
 booking.confirm.header=Booking confirmation
 booking.confirm.wagon=Select wagon
-
+booking.qr.header=Your ticket
+booking.qr.download=Click here to download your ticket in pdf format
 
 #buttons and common columns
 admin.actions=Actions
@@ -122,20 +131,43 @@ button.add.route-point=Add new route-point
 button.update=Update
 button.booking.confirm=Order
 
+#schedule
+schedule.departure=Departure station
+schedule.arrival=Arrival station
+schedule.to=Arrival to station
+schedule.from=Departure from station
+schedule.time.from=Departure time
+schedule.time.to=Arrival time
+schedule.station=station
+
 #warnings
 login.not.correct=Wrong email or password, try again
+register.not.correct=Look like this email is busy or something went wrong
 admin.no.users.found=No users found
 admin.no.stations.found=No stations found
 admin.no.wagons.found=No wagons found
 admin.no.routes.found=No routes found
 admin.no.station=Not added yet
 booking.confirm.wagon.full=No place in selected wagon
+same.stations=Departure and arrival stations are same
+no.routes=No routes found for your stations. Try another
+no.stations=No stations exists for now
 
 #enums
 FIRST=First
 SECOND=Second
 PAID=Paid
 NOT_PAID=Not paid
+CUSTOMER=Customer
+ADMIN=Admin
+
+#stations
+Kryvyn-South=Kryvyn-South
+Ivano-Frankivsk=Ivano-Frankivsk
+Lviv-South=Lviv-South
+Brody-Central=Brody-Central
+Shepetivka-South=Shepetivka-South
+Kyiv-Pass=Kyiv-Pass
 
 #validation
 route.id.notnull=Id cannot be empty field
@@ -154,8 +186,9 @@ user.email.notblank=Email field cannot be empty
 user.email.notcorrect=Email field must be correct
 user.password.notblank=User password cannot be null
 user.password.pattern=Password should be from 8 to 16 symbols, at least 1 capital and 1 digit
+user.password.mismatch=Passwords must be the same
 wagon.seats.min=Minimum value of seats must be more than 1
-wagon.seats.max=Maximum value of seats must be less than 999
+wagon.seats.max=Maximum value of seats must be less than 99
 wagon.price.min=Minimum value of price must be more than 1
 wagon.price.max=Maximum value of price must be less than 999
 
