--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -29,67 +29,76 @@ about.last.name=Фамілія
 about.email=Електронна пошта
 about.phone=Телефон
 about.me=Стисло про себе
+about.balance=Мої кошти
 
 #admin-users
-nav.admin.users=\u041a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
-admin.users.edit.form=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u043d\u043d\u044f \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
-admin.users.bio=\u0411\u0456\u043e
-admin.users.role=\u0420\u043e\u043b\u044c
-admin.users.status=\u0421\u0442\u0430\u0442\u0443\u0441
+nav.admin.users=Користувачі
+admin.users.edit.form=Форма редагування користувача
+admin.users.bio=Біо
+admin.users.role=Роль
+admin.users.status=Статус
 
 #admin-stations
-nav.admin.stations=\u0421\u0442\u0430\u043d\u0446\u0456\u0456
-admin.station.edit.form=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u043d\u043d\u044f \u0441\u0442\u0430\u043d\u0446\u0456\u0457
-admin.station.add.form=\u0414\u043e\u0434\u0430\u0432\u0430\u043d\u043d\u044f \u043d\u043e\u0432\u043e\u0457 \u0441\u0442\u0430\u043d\u0446\u0456\u0457
-admin.stations.id=Id \u0421\u0442\u0430\u043d\u0446\u0456\u0457
-admin.stations.name=\u041d\u0430\u0437\u0432\u0430 \u0441\u0442\u0430\u043d\u0446\u0456\u0457
-admin.stations.code=\u041c\u0456\u0436\u043d\u0430\u0440\u043e\u0434\u043d\u0438\u0439 \u043a\u043e\u0434
+nav.admin.stations=Станції
+admin.station.edit.form=Форма редагування станції
+admin.station.add.form=Форма додавання станціїї
+admin.stations.id=Id станції
+admin.stations.name=Назва станції
+admin.stations.code=Міжнародний код станції
 
 #admin-wagons
-nav.admin.wagons=\u0412\u0430\u0433\u043e\u043d\u0438
-admin.wagon.edit.form=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u043d\u043d\u044f \u0432\u0430\u0433\u043e\u043d\u0443
-admin.wagon.add.form=\u0414\u043e\u0434\u0430\u0432\u0430\u043d\u043d\u044f \u043d\u043e\u0432\u043e\u0433\u043e \u0432\u0430\u0433\u043e\u043d\u0443
-admin.wagons.wagon=Id \u0412\u0430\u0433\u043e\u043d\u0430
-admin.wagons.route=Id \u041c\u0430\u0440\u0448\u0440\u0443\u0442\u0443
-admin.wagons.wagon-type=\u041a\u043b\u0430\u0441\u0441 \u0432\u0430\u0433\u043e\u043d\u0443
-admin.wagons.seats=\u041a\u0456\u043b\u044c\u043a\u0456\u0441\u0442\u044c \u043d\u0430\u044f\u0432\u043d\u0438\u0445 \u043c\u0456\u0441\u0446\u044c
-admin.wagons.price=\u0411\u0430\u0437\u043e\u0432\u0430 \u0446\u0456\u043d\u0430
+nav.admin.wagons=Вагони
+admin.wagon.edit.form=Форма редагування вагону
+admin.wagon.add.form=Форма додавання вагону
+admin.wagons.wagon=Id вагону
+admin.wagons.route=Id маршруту
+admin.wagons.wagon-type=Клас вагону
+admin.wagons.seats=Кількість наявних місць
+admin.wagons.price=Ціна за місце
 
 #admin-routes
-nav.admin.routes=\u041c\u0430\u0440\u0448\u0440\u0443\u0442\u0438
-admin.route.add.form=\u0414\u043e\u0434\u0430\u0432\u0430\u043d\u043d\u044f \u043d\u043e\u0432\u043e\u0433\u043e \u043c\u0430\u0440\u0448\u0440\u0443\u0442\u0443
-admin.route.id=Id \u041c\u0430\u0440\u0448\u0440\u0443\u0442\u0443
-admin.route.train=Id \u041f\u043e\u0442\u044f\u0433\u0443
-admin.route.departure = \u0414\u0430\u0442\u0430 \u0432\u0456\u0434\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u043d\u044f
-admin.route.arrival = \u0414\u0430\u0442\u0430 \u043f\u0440\u0438\u0431\u0443\u0442\u0442\u044f
-admin.route.stations=\u0421\u0442\u0430\u043d\u0446\u0456\u0457 \u043c\u0430\u0440\u0448\u0440\u0443\u0442\u0443
-admin.route.show.route-point=\u041f\u043e\u043a\u0430\u0437\u0430\u0442\u0438 \u0443\u0432\u0435\u0441\u044c \u043c\u0430\u0440\u0448\u0440\u0443\u0442
-admin.route-point.station=Id \u0421\u0442\u0430\u043d\u0446\u0456\u0456 \u0442\u0430 \u043d\u0430\u0437\u0432\u0430
-admin.route-point.add.form=\u0414\u043e\u0434\u0430\u0432\u0430\u043d\u043d\u044f \u0442\u043e\u0447\u043a\u0438 \u043c\u0430\u0440\u0448\u0440\u0443\u0442\u0430
-admin.route-point.edit.form=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0442\u043e\u0447\u043a\u0443 \u043c\u0430\u0440\u0448\u0440\u0443\u0442\u0430
+nav.admin.routes=Маршрути
+admin.route.add.form=Форма додавання маршруту
+admin.route.id=Id маршруту
+admin.route.train=Id потягу
+admin.route.departure = Дата відправлення
+admin.route.arrival = Дата прибуття
+admin.route.stations=Станції маршруту
+admin.route.show.route-point=Показати весь маршрут
+admin.route-point.station=Id станції та назва
+admin.route-point.add.form=Додавання точки маршрута
+admin.route-point.edit.form=Редагування точку маршрута
+
+#admin-orders
+nav.admin.orders=Замовлення
+admin.user.id=Id покупця
+admin.passenger.firstname=Ім`я пасажира
+admin.passenger.lastname=Фамілія пасажира
+admin.user.email=Адреса покупця
+admin.no.orders.found=Ще немає жодного замовлення
 
 #customer
-customer.tickets=\u041c\u043e\u0457 \u043a\u0432\u0438\u0442\u043a\u0456
+customer.tickets=Мої квитки
 
 #label-helpers
-label.login.email=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u0441\u0432\u043e\u044e \u0435\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u0443 \u0430\u0434\u0440\u0435\u0441\u0443
-label.login.password=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u0441\u0432\u0456\u0439 \u043f\u0430\u0440\u043e\u043b\u044c
+label.login.email=Введіть свою електронну адресу
+label.login.password=Введіть свій пароль
 label.register.first=Введіть своє ім`я
 label.register.last=Введіть свою фамілію
 label.register.repeat.pass=Повторіть свій пароль
-label.user.first.name=\u0406\u043c\`\u044f
-label.user.last.name=\u0424\u0430\u043c\u0456\u043b\u0456\u044f
-label.user.email= \u041f\u043e\u0448\u0442\u043e\u0432\u0430 \u0430\u0434\u0440\u0435\u0441\u0430
-label.user.role=\u0420\u043e\u043b\u044c
-label.station.name=\u041d\u0430\u0437\u0432\u0430 \u0441\u0442\u0430\u043d\u0446\u0456\u0457
-label.station.code=\u041a\u043e\u0434 \u0441\u0442\u0430\u043d\u0446\u0456\u0457
-label.wagon.route=\u041c\u0430\u0440\u0448\u0440\u0443\u0442
-label.wagon.wagon=\u0412\u0430\u0433\u043e\u043d
-label.wagon.wagon-type=\u041a\u043b\u0430\u0441\u0441 \u0432\u0430\u0433\u043e\u043d\u0430
-label.wagon.seats=\u041a\u0456\u043b\u044c\u043a\u0456\u0441\u0442\u044c \u043c\u0456\u0441\u0446\u044c
-label.wagon.base-price=\u0411\u0430\u0437\u043e\u0432\u0430 \u0446\u0456\u043d\u0430
-label.route.route=\u041d\u043e\u043c\u0435\u0440 \u043c\u0430\u0440\u0448\u0440\u0443\u0442\u0430
-label.route.train=\u041d\u043e\u043c\u0435\u0440 \u043f\u043e\u0442\u044f\u0433\u0430
+label.user.first.name=Ім`я
+label.user.last.name=Фамілія
+label.user.email= Поштова адреса
+label.user.role=Роль
+label.station.name=Назва станції
+label.station.code=Код станції
+label.wagon.route=Маршрут
+label.wagon.wagon=Вагон
+label.wagon.wagon-type=Клас вагону
+label.wagon.seats=Кількість місць
+label.wagon.base-price=Базова ціна
+label.route.route=Номер маршрута
+label.route.train=Номер потяга
 
 #booking-ticket-data
 ticket.train=Номер потягу
@@ -98,6 +107,7 @@ ticket.type=Класс комфорту
 ticket.status=Статус
 ticket.info=Ви зможете отримати квиток після оплати, натиснувши на відповідну іконку
 booking.header=Бронюйте вашу подорож зараз!
+booking.header.error=Сторінка інформації щодо помилок при бронюванні
 select.departure=Оберіть станцію відправлення
 select.arrival=Оберіть станцію прибуття
 booking.found.train=Потяг
@@ -108,30 +118,55 @@ booking.found.seats=Наявні місця
 booking.found.price=Ціна(грн)
 booking.found.seats-present=Місць
 booking.confirm.header=Підтвердження заказу
+booking.qr.header=Ваш квиток
+booking.qr.download=Натисніть щоб відкрити ваш квиток у pdf форматі
 
 #buttons and common columns
-admin.actions=\u0414\u0456\u0457
-button.add.station=\u0414\u043e\u0434\u0430\u0442\u0438 \u043d\u043e\u0432\u0443 \u0441\u0442\u0430\u043d\u0446\u0456\u044e
-button.add.wagon=\u0414\u043e\u0434\u0430\u0442\u0438 \u043d\u043e\u0432\u0438\u0439 \u0432\u0430\u0433\u043e\u043d
-button.add.route=\u0414\u043e\u0434\u0430\u0442\u0438 \u043d\u043e\u0432\u0438\u0439 \u043c\u0430\u0440\u0448\u0440\u0443\u0442
-button.add.route-point=\u0414\u043e\u0434\u0430\u0442\u0438 \u0443 \u043c\u0430\u0440\u0448\u0440\u0443\u0442
-button.update=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
+admin.actions=Дії
+button.add.station=Додати нову станцію
+button.add.wagon=Додати новий вагон
+button.add.route=Додати новий маршрут
+button.add.route-point=Додати у маршрут
+button.update=Редагувати
 button.booking.confirm=Придбати
 booking.confirm.wagon=Оберіть номер вагону
 
+#schedule
+schedule.departure=Станція відправлення
+schedule.arrival=Станція прибуття
+schedule.to=Прибуття до станції
+schedule.from=Відправлення від станції
+schedule.time.from=Час відправлення
+schedule.time.to=Час прибуття
+schedule.station=станція
+
 #warnings
-login.not.correct=\u041d\u0435\u043a\u043e\u0440\u0435\u043a\u0442\u043d\u0430 \u0430\u0434\u0440\u0435\u0441\u0430/\u043f\u0430\u0440\u043e\u043b\u044c, \u0441\u043f\u0440\u043e\u0431\u0443\u0439\u0442\u0435 \u0449\u0435
-admin.no.users.found=\u041d\u0435\u043c\u0430\u0454 \u0437\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u043e\u0432\u0430\u043d\u0438\u0445 \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432
-admin.no.stations.found=\u0416\u043e\u0434\u043d\u0438\u0445 \u0441\u0442\u0430\u043d\u0446\u0456\u0439 \u043d\u0435 \u0437\u043d\u0430\u0439\u0434\u0435\u043d\u043e
-admin.no.wagons.found=\u0416\u043e\u0434\u043d\u043e\u0433\u043e \u0432\u0430\u0433\u043e\u043d\u0443 \u043d\u0435 \u0437\u043d\u0430\u0439\u0434\u0435\u043d\u043e
-admin.no.station=\u0421\u0442\u0430\u043d\u0446\u0456\u044f \u0432\u0456\u0434\u0441\u0443\u0442\u043d\u044f
+login.not.correct=Некоректна адреса/пароль, спробуйте ще
+register.not.correct=Поштова адреса вже зайнята. Спробуйте іншу
+admin.no.users.found=Немає зареєстрованих користувачів
+admin.no.stations.found=Жодних станцій не знайдено
+admin.no.wagons.found=Жодного вагону не знайдено
+admin.no.station=Станція відсутня
 booking.confirm.wagon.full=Немає місць у обраному вагоні
+same.stations=Станція відправлення та прибуття повинні відрізнятись
+no.routes=Не знайдено маршрутів за вашими критерямі пошуку. Спробуйте інші станції
+no.stations=Немає станцій. Неможливо здійснити пошук
 
 #enums
 FIRST=Перший
 SECOND=Другий
 PAID=Оплачено
 NOT_PAID=Не оплачено
+CUSTOMER=Клієнт
+ADMIN=Адміністратор
+
+#stations
+Kryvyn-South=Кривин-Південний
+Ivano-Frankivsk=Івано-Франківськ
+Lviv-South=Львів-Південний
+Brody-Central=Броди-Центральний
+Shepetivka-South=Шепетівка-Південний
+Kyiv-Pass=Київ-Пассажирський
 
 #validation
 route.id.notnull=Номер маршруту не введений
@@ -144,14 +179,15 @@ station.name.pattern=Назва станціі має бути від 4 до 16 
 station.code.pattern=Код станціі має бути від 1 до 3 великих букв
 user.firstname.notblank=Поле ім`я не має бути незаповненим
 user.lastname.notblank=Поле фамілія не має бути незаповненим
-user.firstname.pattern=Ім`я має бути до 16 букв
-user.lastname.pattern=Фамілія має бути до 16 букв
+user.firstname.pattern=Ім`я має бути до 16 літер
+user.lastname.pattern=Фамілія має бути до 16 літер
 user.email.notblank=Поштова адреса не заповнена
 user.email.notcorrect=Невірно введена поштова адреса
 user.password.notblank=Пароль не введений
 user.password.pattern=Пароль має бути від 8 до 16 літер, мінімум 1 велика літера та цифра
+user.password.mismatch=Паролі мають бути однакові
 wagon.seats.min=Кількість місць має бути від 1
-wagon.seats.max=Кількість місць має бути менш ніж 999
+wagon.seats.max=Кількість місць має бути менш ніж 99
 wagon.price.min=Ціна за місце має бути від 1
 wagon.price.max=Ціна за місце має бути менш ніж 999
 
