Added db scripts.Bug fix

--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -1,13 +1,13 @@
 #common
-nav.home=\u0413\u043e\u043b\u043e\u0432\u043d\u0430
-nav.welcome.guest=\u0412\u0456\u0442\u0430\u0454\u043c\u043e, \u0413\u0456\u0441\u0442\u044c!
+nav.home=Головна
+nav.welcome.guest=Вітаємо, Гість
 nav.welcome.admin=Привіт, Адміністратор!
-nav.welcome=\u041f\u0440\u0438\u0432\u0456\u0442
-nav.about-us=\u041f\u0440\u043e \u043d\u0430\u0441
-nav.login=\u0412\u0445\u0456\u0434
-nav.register=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044f
-nav.user.about=\u041f\u0440\u043e \u043c\u0435\u043d\u0435
-nav.user.logout=\u0412\u0438\u0439\u0442\u0438
+nav.welcome=Привіт
+nav.about-us=Про нас
+nav.login=Вхід
+nav.register=Реєстрація
+nav.user.about=Про мене
+nav.user.logout=Вийти
 
 #login-page
 login.header=Сторінка входу
@@ -146,6 +146,7 @@ register.not.correct=Поштова адреса вже зайнята. Спро
 admin.no.users.found=Немає зареєстрованих користувачів
 admin.no.stations.found=Жодних станцій не знайдено
 admin.no.wagons.found=Жодного вагону не знайдено
+admin.no.routes.found=Жодного маршрута не знайдено
 admin.no.station=Станція відсутня
 booking.confirm.wagon.full=Немає місць у обраному вагоні
 same.stations=Станція відправлення та прибуття повинні відрізнятись
